--- a/01-fundamentos-react/src/components/Sidebar.module.css
+++ b/01-fundamentos-react/src/components/Sidebar.module.css
@@ -18,6 +18,32 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: calc(0px - 1.5rem - 6px);
+}
+
+.avatar{
+    width: calc(3rem + 12px); /*12px soma de border e outline */
+    height: calc(3rem + 12px); /*12px soma de border e outline*/
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+
+    border: 4px solid var(--gray-800);
+    outline: 2px solid var(--green-500);
+}
+
+.profile strong{
+    margin-top: 1rem;
+    color: var(--gray-100);
+    line-height: 1.6;
+}
+
+.profile span{
+    font-size: 0.875rem;
+    color: var(--gray-400);
+    line-height: 1.6;
 }
 
 .sidebar footer{
@@ -37,10 +63,24 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
+    
     border-radius: 8px;
     -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
     -ms-border-radius: 8px;
     -o-border-radius: 8px;
+
+    gap: 0.5rem;
+
+    transition: color 0.1s, background-color 0.1s;
+    -webkit-transition: color 0.1s, background-color 0.1s;
+    -moz-transition: color 0.1s, background-color 0.1s;
+    -ms-transition: color 0.1s, background-color 0.1s;
+    -o-transition: color 0.1s, background-color 0.1s;
+}
+
+.sidebar footer a:hover{
+    background-color: var(--green-500);
+    color: var(--white);
+    
 }
