--- a/01-fundamentos-react/src/components/Post.module.css
+++ b/01-fundamentos-react/src/components/Post.module.css
@@ -122,8 +122,14 @@
     max-height: none;
 }
 
-.commentForm button[type=submit]:hover {
+/*Se button type=submit não for disabled (HTML), acontece no hover*/
+.commentForm button[type=submit]:not(:disabled):hover {
     background-color: var(--green-300);
+}
+
+.commentForm button[type=submit]:disabled {
+    opacity: 0.7;
+    cursor: not-allowed;
 }
 
 .commentList{
